# meme25

./: .copilot-instructions.md  .env.backup  .env.example  .gitignore  Cargo.toml  Dockerfile.unified  Makefile  PRODUCTION_READINESS.md  PROJECT_INDEX.md  README.md  SECURITY_AUDIT.md  TRADINGVIEW_SETUP.md  UPGRADE_SUMMARY.md  _test_farcaster.py  _test_infura.py  _test_jupiter.py  agents.md  autonomous_cli.sh  deploy.sh  docker-compose.efficient.yml  docker-compose.override.yml  docker-compose.yml  init.sql  init_redis.sh  jito_auth_key.example.json  my_wallet.example.json  prometheus.yml  test_system.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_archive/: Cargo.toml
_archive/monolith/: Cargo.toml  copilot-instructions.md
_archive/monolith/src/: gen_key.rs  main.rs
backtest_engine/: Cargo.toml  Dockerfile  main.py  requirements.txt  run_backtest.py
backtest_engine/src/: lib.rs
context/: market_context.md
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/templates/: index.html
database/: schema.sql
executor/: Cargo.toml  Dockerfile
executor/migrations/: 0001_init.sql
executor/src/: advanced_circuit_breakers.rs  autonomous_coder.rs  circuit_breaker.rs  config.rs  correlation_manager.rs  data_validation.rs  database.rs  event_loop.rs  execution_timer.rs  executor.rs  health.rs  jito_client.rs  jupiter.rs  lib.rs  main.rs  metrics.rs  mev_protection.rs  performance_attributor.rs  performance_dashboard.rs  pnl_tracker.rs  portfolio_allocator.rs  production_config.rs  risk_manager.rs  risk_overlay.rs  signer_client.rs  strategy_evolution.rs  strategy_registry.rs  transaction_cost_analyzer.rs  websocket_api.rs
executor/src/strategies/: airdrop_rotation.rs  bridge_inflow.rs  dev_wallet_drain.rs  eth_breakout_momentum.rs  korean_time_burst.rs  liquidity_migration.rs  mean_revert_1h.rs  mod.rs  momentum_5m.rs  perp_basis_arb.rs  rug_pull_sniffer.rs  social_buzz.rs  sol_rsi_reversion.rs
market_data_gateway/: Cargo.toml  Dockerfile
market_data_gateway/src/: main.rs
portfolio_manager/: Cargo.toml  Dockerfile
portfolio_manager/src/: main.rs
position_manager/: Cargo.toml  Dockerfile
position_manager/src/: main.rs
research/: eth_breakout_momentum.md  sol_rsi_reversion.md
scripts/: TRADINGVIEW_SETUP.md  bootstrap_secrets.sh  check_system_status.sh  discord_monitor.py  generate_market_context.py  inject_mock_events.py  simulate_transaction.py  smoke_test.py  tradingview_integration.py
sentient-scavenger/: .env.example  ARCHITECTURE.md  AUDIT_REPORT.md  DELIVERY.md  FINAL_SUMMARY.md  LIVE_TEST_INSTRUCTIONS.md  PRODUCTION_READY.md  QUICKREF.md  README.md  ROADMAP.md  SETUP.md  START_HERE.txt  check_balance.ts  debug_pubkey.ts  get_raydium_id.ts  test_pk.js
sentient-scavenger/scripts/: simulate_migration.ts  test_blockhash.ts  test_janitor.ts  test_jito.ts  test_openai.ts
sentient-scavenger/src/: config.ts  main.ts  types.d.ts
sentient-scavenger/src/core/: Dashboard.ts  Janitor.ts  MigrationListener.ts  PumpPreCog.ts  SentientBrain.ts  SniperEngine.ts
sentient-scavenger/src/scripts/: verify-credentials.ts
sentient-scavenger/src/services/: BlockhashManager.ts  JitoExecutor.ts  SenderExecutor.ts  Whitelist.ts
sentient-scavenger/src/utils/: raydium.ts  raydiumParser.ts
shared-models/: Cargo.toml
shared-models/src/: error.rs  lib.rs
signer/: Cargo.toml  Dockerfile
signer/src/: main.rs
src/data_sources/: market_data_gateway.rs
src/execution/: jito_client.rs  jupiter_client.rs  liquidity_analyzer.rs  mod.rs
src/metrics/: mod.rs
src/risk_management/: circuit_breaker.rs
src/shared_models/: config.rs
src/shared_models/src/: config.rs
src/strategies/: momentum.rs  social_sentiment.rs  volume_spike.rs
strategy_factory/: Cargo.toml  Dockerfile
strategy_factory/src/: autonomous_coder.rs  evolution_engine.rs  lib.rs  main.rs
tests/: Cargo.toml
tests/src/: integration_test.rs
