[workspace]
members = [
  "shared-models",
  "executor",
  # "signer",              # Excluded: incompatible zeroize version with sqlx rustls
  "strategy_factory",
  "portfolio_manager",
  "market_data_gateway",
  "position_manager",
  "backtest_engine",     # upgraded (see §10)
  "tests",               # integration‑test harness
]
resolver = "2"

default-members = ["executor"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
url = "2.5"

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
