[workspace]
members = [
  "monolith",
]
resolver = "2"

default-members = ["monolith"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
url = "2.5"
