[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-models = { path = "../shared-models" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "streams"] }
reqwest = { version = "0.11", features = ["json"] }
solana-sdk = "1.16"
solana-client = "1.16"
base64 = "0.21"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
lazy_static = "1.4"
once_cell = "1.19"
prometheus = "0.13"
rand = "0.8"
regex = "1.10"
async-trait = "0.1"
inventory = "0.3"
