[package]
name = "market_data_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow       = "1"
futures-util = "0.3"
redis        = { version = "0.24", features = ["tokio-comp"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
shared-models = { path = "../shared-models" }
tokio        = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.20"
async-tungstenite = { version = "0.24", features = ["tokio-runtime"] }
tracing      = "0.1"
tracing-subscriber = "0.3"
url          = "2"
chrono       = "0.4"
