[package]
name = "portfolio_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "portfolio_manager"
path = "src/main.rs"

[dependencies]
anyhow        = "1"
redis         = { version = "0.24", features = ["tokio-comp"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
shared-models = { path = "../shared-models" }
tracing       = "0.1"
tokio         = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono        = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
