[package]
name = "position_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "position_manager"
path = "src/main.rs"

[dependencies]
anyhow        = "1"
serde         = { version = "1", features = ["derive"] }
redis         = { version = "0.24", features = ["tokio-comp"] }
sqlx          = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"] }
tokio         = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
tracing       = "0.1"
shared-models = { path = "../shared-models" }
chrono        = "0.4"
serde_json    = "1.0"
uuid          = { version = "1.6", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
