[package]
name = "shared-models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
redis = "0.24"
sqlx = { version = "0.7", default-features = false, features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
prometheus = "0.13"
