[package]
name = "signer"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-models = { path = "../shared-models" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
solana-sdk = "1.16"
base64 = "0.21"
bincode = "1.3"
zeroize = "1.7"
