[package]
name    = "strategy_factory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow       = "1.0"
rand         = "0.8"
redis        = { version = "0.24", features = ["tokio-comp"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
shared-models = { path = "../shared-models" }
tokio        = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing      = "0.1"
chrono       = { version = "0.4", features = ["serde"] }
